--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .vs/etoro-dane/v16/Browse.VC.opendb
 .vs/etoro-dane/v16/Browse.VC.db-wal
 .vs/etoro-dane/v16/ipch/AutoPCH/bfb94246d165a834/ETORO-DANE.ipch
+.vs/etoro-dane/v16/.suo
