--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,20 @@
 .vs/etoro-dane/v16/Browse.VC.db-wal
 .vs/etoro-dane/v16/ipch/AutoPCH/bfb94246d165a834/ETORO-DANE.ipch
 .vs/etoro-dane/v16/.suo
+Debug/etoro-dane.tlog/CL.command.1.tlog
+Debug/etoro-dane.tlog/CL.read.1.tlog
+Debug/etoro-dane.tlog/CL.write.1.tlog
+Debug/etoro-dane.tlog/etoro-dane.lastbuildstate
+Debug/etoro-dane.tlog/link.command.1.tlog
+Debug/etoro-dane.tlog/link.read.1.tlog
+Debug/etoro-dane.tlog/link.write.1.tlog
+Debug/etoro-dane.vcxproj.FileListAbsolute.txt
+Debug/vc142.idb
+Debug/vc142.pdb
+Debug/vcpkg.applocal.log
+Debug/etoro-dane.pdb
+Debug/etoro-dane.obj
+Debug/etoro-dane.log
+Debug/etoro-dane.ilk
+Debug/etoro-dane.exe.recipe
+Debug/etoro-dane.exe
